<resources>
    <string name="app_name">Kaapan</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sos">SoS</string>
    <string name="silent">SILENT</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="kaapan_sos">Kaapan SoS</string>
    <string name="title_activity_ins_page">insPage</string>
    <string name="addcontacts">addcontacts</string>
    <string name="pullupmenu">pullupmenu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>