<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="411dp"
        android:layout_height="326dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/location"
        app:layout_constraintEnd_toStartOf="@+id/silent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_current_location"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/SoS"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.686"
        tools:ignore="MissingConstraints" />

    <Switch
        android:id="@+id/silent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/silent"
        android:textColor="#FFFF"
        app:layout_constraintBottom_toTopOf="@+id/SoS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SoS"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/round_btn"
        android:fontFamily="@font/aldrich"
        android:text="@string/sos"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271">

    </androidx.appcompat.widget.AppCompatButton>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0">


        <FrameLayout
            android:id="@+id/sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/menu"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/ic_line_svgrepo_com"
                android:contentDescription="@string/pullupmenu">

            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:id="@+id/listView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/contacts"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom|right"
                android:src="@drawable/ic_adduser"
                tools:ignore="RtlHardcoded"
                android:contentDescription="@string/addcontacts">

            </ImageView>


        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>